--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=3000
 MONGO_URL=mongodb+srv://admin:admin@cluster0.uutzq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0/taskiee
+JWT_SECRET=secret
