--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGO_URL=mongodb+srv://admin:admin@cluster0.uutzq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0/taskiee
+MONGO_URL=mongodb://atlas-sql-67e66de036591c40d7b6be0c-gqlp0.a.query.mongodb.net/temp?ssl=true&authSource=admin
 JWT_SECRET=secret
